// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronLoans tests should load the details component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      fixed={false}
      headerActionClickHandler={null}
      headerActionComponent={null}
      name="loan requests"
      renderSegment={true}
      rowActionClickHandler={null}
      rows={Array []}
      seeAllComponent={
        <Button
          as="button"
          onClick={[Function]}
          size="tiny"
        >
          Show all
        </Button>
      }
      showMaxRows={10}
      singleLine={false}
      subtitle=""
      title="Your loan requests"
    />
  </Error>
</Loader>
`;

exports[`PatronLoans tests should render patron loans 1`] = `
<PatronPendingLoans
  data={
    Object {
      "hits": Array [
        Object {
          "created": "2018-01-01T10:05:00.000Z",
          "id": 1,
          "loan_pid": "loan1",
          "metadata": Object {
            "document_pid": "doc1",
            "end_date": "2018-01-01T10:05:00.000Z",
            "loan_pid": "loan1",
            "patron_pid": "patron_1",
            "start_date": "2018-01-01T10:05:00.000Z",
          },
          "updated": "2018-01-01T10:05:00.000Z",
        },
        Object {
          "created": "2018-01-01T10:05:00.000Z",
          "id": 2,
          "loan_pid": "loan2",
          "metadata": Object {
            "document_pid": "doc1",
            "end_date": "2018-01-01T10:05:00.000Z",
            "loan_pid": "loan2",
            "patron_pid": "patron_2",
            "start_date": "2018-01-01T10:05:00.000Z",
          },
          "updated": "2018-01-01T10:05:00.000Z",
        },
      ],
      "total": 2,
    }
  }
  fetchPatronPendingLoans={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  loanState=""
  patron="2"
>
  <Loader>
    <Error>
      <ResultsTable
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="loan requests"
        renderSegment={true}
        rowActionClickHandler={null}
        rows={
          Array [
            Object {
              "Document ID": "doc1",
              "Expiration date": "Invalid DateTime",
              "ID": "loan1",
              "Start date": "2018-01-01",
              "Updated": "2018-01-01 10:05",
            },
            Object {
              "Document ID": "doc1",
              "Expiration date": "Invalid DateTime",
              "ID": "loan2",
              "Start date": "2018-01-01",
              "Updated": "2018-01-01 10:05",
            },
          ]
        }
        seeAllComponent={
          <Button
            as="button"
            onClick={[Function]}
            size="tiny"
          >
            Show all
          </Button>
        }
        showMaxRows={10}
        singleLine={false}
        subtitle=""
        title="Your loan requests"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Your loan requests"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Your loan requests
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Updated",
                      "Document ID",
                      "Start date",
                      "Expiration date",
                    ]
                  }
                  withRowAction={false}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                            width={1}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                              width={1}
                            >
                              <th
                                className="collapsing one wide"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              width={2}
                            >
                              <th
                                className="two wide"
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Updated"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Updated
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Start date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Start date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Expiration date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Expiration date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Updated",
                      "Document ID",
                      "Start date",
                      "Expiration date",
                    ]
                  }
                  rowActionClickHandler={null}
                  rows={
                    Array [
                      Object {
                        "Document ID": "doc1",
                        "Expiration date": "Invalid DateTime",
                        "ID": "loan1",
                        "Start date": "2018-01-01",
                        "Updated": "2018-01-01 10:05",
                      },
                      Object {
                        "Document ID": "doc1",
                        "Expiration date": "Invalid DateTime",
                        "ID": "loan2",
                        "Start date": "2018-01-01",
                        "Updated": "2018-01-01 10:05",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            />
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-test="ID-loan1"
                            >
                              loan1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Updated-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-test="Updated-loan1"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Document ID-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-test="Document ID-loan1"
                            >
                              doc1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Start date-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-test="Start date-loan1"
                            >
                              2018-01-01
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Expiration date-loan1"
                            key="4-loan1"
                          >
                            <td
                              className=""
                              data-test="Expiration date-loan1"
                            >
                              Invalid DateTime
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan2"
                        key="loan2"
                      >
                        <tr
                          className=""
                          data-test="loan2"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            />
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan2"
                            key="0-loan2"
                          >
                            <td
                              className=""
                              data-test="ID-loan2"
                            >
                              loan2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Updated-loan2"
                            key="1-loan2"
                          >
                            <td
                              className=""
                              data-test="Updated-loan2"
                            >
                              2018-01-01 10:05
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Document ID-loan2"
                            key="2-loan2"
                          >
                            <td
                              className=""
                              data-test="Document ID-loan2"
                            >
                              doc1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Start date-loan2"
                            key="3-loan2"
                          >
                            <td
                              className=""
                              data-test="Start date-loan2"
                            >
                              2018-01-01
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Expiration date-loan2"
                            key="4-loan2"
                          >
                            <td
                              className=""
                              data-test="Expiration date-loan2"
                            >
                              Invalid DateTime
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={5}
                  seeAllComponent={
                    <Button
                      as="button"
                      onClick={[Function]}
                      size="tiny"
                    >
                      Show all
                    </Button>
                  }
                  showMaxRows={10}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</PatronPendingLoans>
`;

exports[`PatronLoans tests should render show a message with no user loans 1`] = `
<PatronPendingLoans
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchPatronPendingLoans={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  loanState=""
  patron="2"
>
  <Loader>
    <Error>
      <ResultsTable
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="loan requests"
        renderSegment={true}
        rowActionClickHandler={null}
        rows={Array []}
        seeAllComponent={
          <Button
            as="button"
            onClick={[Function]}
            size="tiny"
          >
            Show all
          </Button>
        }
        showMaxRows={10}
        singleLine={false}
        subtitle=""
        title="Your loan requests"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Your loan requests"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Your loan requests
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
                loan requests
                .
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</PatronPendingLoans>
`;
